[tool.poetry]
name = "phylm"
version = "6.0.2"
description = "Phylm"
authors = ["Dom Batten <dominic.batten@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dbatten5/phylm"
repository = "https://github.com/dbatten5/phylm"
documentation = "https://dbatten5.github.io/phylm"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/dbatten5/phylm/releases"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.0.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
aiohttp = "^3.8.1"
cinemagoer = "^2022.12.27"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^6.1"}
vcrpy = "^4.1.1"
pytest-aiohttp = "^0.3.0"
pytest-asyncio = "^0.16.0"

[tool.poetry.group.dev.dependencies]
safety = "^2.2.0"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
pre-commit = "^2.13.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.9.0"
types-requests = "^2.25.11"

[tool.poetry.group.docs.dependencies]
markdown-include = "*"
mkdocs = "*"
mkdocs-autolinks-plugin = "*"
mkdocs-autorefs = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-htmlproofer-plugin = "*"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocs-minify-plugin = "*"
mkdocstrings = "*"
mkdocstrings-python = "^0.8.2"

[tool.poetry.scripts]
phylm = "phylm.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["phylm"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
  "imdb",
  "imdb.Movie",
  "imdb._exceptions",
  "bs4",
  "bs4.element",
  "requests",
  "vcr",
  "yaml",
]
ignore_missing_imports = true

[tool.isort]
profile = "open_stack"
known_first_party = ["phylm", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
